--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,20 @@ body {
 	font-family: "Verdana", Arial, sans-serif;
 }
 
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+td, th {
+	border: 0.1em solid #dddddd;
+	padding: 0.5em;
+}
+
+tr:nth-child(even) {
+	background-color: #dddddd;
+}
+
 #content {
 	width: 100%;
 	margin: auto;
