--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,15 @@ tr:nth-child(even) {
 	background-color: #f4d442;
 }
 
+#footer {
+	margin: 0;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	border: 0.1em;
+	border-style: solid;
+	background-color: #f4d442;
+}
+
 #topbar h4 {
 	margin: 0;
 	padding: 0;
@@ -89,6 +98,7 @@ tr:nth-child(even) {
 	display: block;
 	background-color: white;
 }
+
 .btn {
     background-color: darkgray;
     border: none;
@@ -114,4 +124,21 @@ tr:nth-child(even) {
 .btntopbar:hover {
     background-color: yellow;
     color: black;
+}
+
+#footer table {
+	width: 100%;
+	border-collapse: collapse;
+	margin-bottom: 1em;
+	margin-top: 1em;
+}
+
+#footer td, #footer th {
+	border: 0px;
+	padding: 0px;
+	padding-left: 1em;
+}
+
+#footer tr {
+	background-color: #f4d442;
 }
